app/javascript/src/styles/views/posts/show/partials/_notes.scss
#image-container {
  position: relative;
  display: flex;
  width: fit-content;
}

#note-container {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  pointer-events: none;
  user-select: none;

  &[enabled="false"] .note-box { display: none; }

  .note-box {
    display: flex;
    &.hidden { display: none; }
    position: absolute;
    pointer-events: all;
    cursor: help;

    background: #ffffee10;
    border: 1px solid white;
    box-sizing: border-box;
    @include st-radius;
    box-shadow: 0 0 0.25rem themed("color-background");

    // Note highlighted by URL anchor
    &.highlighted {
      box-shadow: 0 0 0.5rem #0800FF;
    }

    // Note with pending unsaved changes
    &.pending::before {
      content: "Pending";
      position: absolute;
      top: 0.125rem;
      left: 50%;
      transform: translateX(-50%);

      background: palette("background-orange-d10");
      border-radius: 0.25rem;
      font-size: 0.75rem;
      padding: 0.125rem 0.25rem;
    }

    // Note being edited (drawing new notes or resizing existing ones)
    &.editing {
      pointer-events: none;
      user-select: none;

      opacity: 0.8;
      border: 2px dashed #007cba;
      background: rgba(0, 124, 186, 0.1);
      box-shadow: 0 0 0.5rem rgba(0, 124, 186, 0.5);
      
      // Hide the note body and handles during editing
      .note-body,
      .note-handle-nw,
      .note-handle-se {
        display: none;
      }
    }

    .note-handle-nw, .note-handle-se {
      display: none;
      position: absolute;
      height: 1rem;
      width: 1rem;

      &:before {
        content: "";
        display: block;
        width: 0.5rem;
        height: 0.5rem;
        margin: 0.25rem;

        background: white;
        box-shadow: 0 0 0.125rem themed("color-background");
        border: 1px solid themed("color-background");
        border-radius: 2px;
      }
    }

    .note-handle-nw {
      top: -0.5rem;
      left: -0.5rem;
      cursor: nw-resize;
    }
    .note-handle-se {
      bottom: -0.5rem;
      right: -0.5rem;
      cursor: se-resize;
    }

    &:hover, &.focused {
      .note-body { display: block; }
    }
  }

  .note-body {
    display: none;
    position: absolute;
    top: calc(100% + 0.25rem);
    left: 0;
    z-index: 1; // Above the note box

    box-sizing: border-box;
    min-height: 1rem;
    padding: 0.25rem;

    // Allow the note body to expand horizontally as needed
    min-width: 1rem;
    max-width: 10rem;
    width: max-content;

    @include st-radius;
    border: 1px solid white;
    box-shadow: 0 0 0.125rem black;
    background: #ffffee;
    color: #000;

    font-size: 0.875rem;
    line-height: 1rem;

    &:before, &:after {
      // Cover the gap between the note box and the body
      // So that the user can mouse over it without the body disappearing
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      height: 0.33rem;
      background: transparent;
    }
    &:after { bottom: -0.33rem; }
    &::before { top: -0.33rem; }

    // DText overrides, for the sake of readability
    .styled-dtext {
      a, a:link, a:visited {
        color: #00E;
        text-decoration: underline;
      }
      a:hover { color: #551A8B; }
    }
  }

  // Editing mode
  &[editing="true"] {
    pointer-events: all;
    cursor: crosshair;
    user-select: none; // Prevent text selection during drag
    
    .note-body { cursor: pointer; }

    .note-box {
      cursor: move;
      
      &:hover {
        .note-handle-nw, .note-handle-se { display: block; }
      }
    }
  }

  // Moving, resizing, or drawing a note
  // Disable interactions with notes except the one being dragged.
  // This helps with performance, and prevents accidental interactions.
  &[dragging="true"], &[resizing="true"]{
    .note-box .note-body { display: none !important; }
    .note-box:not(.editing) { pointer-events: none; }
  }
  &[dragging="true"] {
    .note-box .note-handle { display: none !important; }
  }
}

#note-editor {
  display: flex;
  flex-flow: column;
  gap: 0.5rem;

  & > .input { margin-bottom: 0; }
  textarea {
    width: 100%;
    box-sizing: border-box;
  }

  div.note-editor-help {
    display: flex;
    justify-content: space-between;
  }

  div.note-editor-submit {
    display: flex;
    gap: 0.5rem;

    button { width: 25%; }
  }

  // Hide delete and history buttons for temporary notes
  &.temporary {
    button[name='note-delete'],
    button[name='note-history'] {
      display: none;
    }
  }
}

// Translation options form
#mark-as-translated-section {
  fieldset {
    display: flex;
    flex-flow: column;
    gap: 0.25rem;
  }
  div.input { margin-bottom: 0; }
}

